# blueshift-developer-kit

./: LICENSE  README.md
blueshift-stubs/: .gitignore  README.md  pyproject.toml
blueshift-stubs/blueshift/: api.pyi  assets.pyi  errors.pyi  protocol.pyi  research.pyi  types.pyi
blueshift-stubs/blueshift/finance/: commission.pyi  margin.pyi  slippage.pyi
blueshift-stubs/blueshift/pipeline/: __init__.pyi  term.pyi
blueshift-stubs/blueshift/pipeline/classifiers/: __init__.pyi
blueshift-stubs/blueshift/pipeline/data/: __init__.pyi
blueshift-stubs/blueshift/pipeline/factors/: __init__.pyi  basic.pyi  factors.pyi  statistical.pyi  technical.pyi
blueshift-stubs/blueshift/pipeline/filters/: __init__.pyi
llm-guides/: README.md  llm-context-pipeline.md  llm-context.md
vs-code/: README.md  pyrightconfig.json
vs-code/blueshift-code-extension/: package.json
vs-code/blueshift-code-extension/snippets/: snippets.json
